# dequantizer

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: verify.yml
ci/: run_checks.sh  utils.sh  validate.sh
dequantizer/: __init__.py
dequantizer/src/: tensor_ops.py
dequantizer/src/graph/: __init__.py  node.py  tensor_graph.py  tensor_initializers.py  tensor_ops.py  tensor_utils.py  test_unit.py
examples/: 3d_ising_canonicalization.py  ibm_eagle_127_qubits.py  ibm_eagle_processor.py
examples/qmcmc/: convergence_comparison.py  plotting.ipynb
examples/quantum_annealing/: README.md  compare_optimization.py  exact.py  explore_numerical_results.ipynb  mqlib.py  plot_benchmarks_maxcut.ipynb  plot_benchmarks_random_ising.ipynb  plot_benchmarks_random_qubo.ipynb  plot_circuit_graph.ipynb  plot_dynamics.ipynb  plot_dynamics_comparison.ipynb  plot_entropy_validation.ipynb  plot_exact_validation.ipynb  plot_exact_validation_time.ipynb  plot_graph_stats.ipynb  plot_qbp.ipynb  plot_qubo_qa_analysis.ipynb  plot_simcim.ipynb  plot_tensor_graph.ipynb  plotting.ipynb  qbp.py  run_quantum_annealing.py  simcim.py
src/: __init__.py
src/graph/: edge.py  element.py  message_initializer.py  node.py  tensor_edge_api.py  tensor_graph.py  tensor_graph_api.py  tensor_initializers.py  tensor_node_api.py  test_tensor_graph.py
src/mappings/: __init__.py  belief_propagation.py  messages_distance.py  symmetric_gauge.py  tensor_ops.py  utils_testing.py  vidal_distance.py  vidal_gauge.py
src/tests/: test_tensor_graph.py  test_tree_ghz_belief_prop.py
(+100 files in other folders)
